# StarSimX

./: BUILD_EXE.md  README.md  StarSimX.sln  StarSimX.spec  __main__.py  example.config.json  pyproject.toml  requirements.txt  run_gui.py  starship.toml
StarSimX/: StarSimX.py  StarSimX.pyproj  run_data.npz
